--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title_block %}
-    {% if category %}#
+    {% if category %}
         {{ category.name }}
     {% else %}
         Unknown Category
